--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -2,7 +2,6 @@
 
 $column-header-height: 46px;
 $column-footer-height: 46px;
-$column-border-radius: 5px;
 
 .column {
     flex: 0 0 auto;
@@ -37,7 +36,7 @@ $column-border-radius: 5px;
         border-bottom-right-radius: $column-border-radius;
     }
 
-    ul.task-list {
+    ul.card-list {
         list-style-type: none;
         max-height: calc(100% - #{$column-header-height} - #{$column-footer-height});
         overflow-y: auto;
