--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,7 +2,8 @@
 
 $card-border-radius: 4px;
 
-li.task-item {
+
+li.card-item {
     background-color: #fff;
     padding: $gap;
     border-radius: $card-border-radius;
