--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@ body {
 
 .trello {
     height: 100vh;
-    display: grid;
-    grid-template-rows: 40px 50px 1fr;
+    overflow: hidden;
+    
     background-color: $primary-color; 
 }
