--- a/src/components/BoardBar/BoardBar.scss
+++ b/src/components/BoardBar/BoardBar.scss
@@ -1,6 +1,7 @@
 @import '_setting.scss';
 
 .navbar-board {
+    height: $navbar-board-height;
     background-color: $primary-color;
     font-size: 1.1rem;
     padding-left: $gap;
