--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,9 +1,12 @@
 @import '_setting.scss';
 
 .board-content {
+    height:$board-content-height;
     display: flex;
     margin: 0 $gap $gap;
     overflow-x: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     
     &::-webkit-scrollbar {
         -webkit-appearance: none;
@@ -15,5 +18,9 @@
         background-color: darken($common-element-bg, 15);
         border-radius: 8px;
     }
-
+    .column-drop-preview {
+        background-color: rgba(150, 150, 200, 0.1);
+        border: 1px dashed #abc;
+        margin: 5px 45px 5px 5px;
+      }
 }
