--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -3,15 +3,13 @@
 $card-border-radius: 4px;
 
 
-li.card-item {
+div.card-item {
     background-color: #fff;
     padding: $gap;
     border-radius: $card-border-radius;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-    &:not(:last-child) {
-        margin-bottom: $gap;
-    }
-    
+    cursor: pointer;
+    margin-bottom: $gap;
     img {
         display: block;
         width: calc(100% + 2 * #{$gap});
