--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -3,10 +3,12 @@
 $column-header-height: 46px;
 $column-footer-height: 46px;
 
+$column-height: calc(#{$board-content-height} - #{$gap});
+
 .column {
     flex: 0 0 auto;
     width: 300px;
-    height: calc(100% - $gap);
+    height: calc(#{$column-height} - #{$gap * 2});
     &:not(:first-child) {
         margin-left: $gap;
     }
@@ -17,7 +19,7 @@ $column-footer-height: 46px;
         padding: 0 8px;
     }
 
-    header {
+    header.column-drag-handle {
         padding-left: 15px;
         height: $column-header-height;   
         line-height: 36px;
@@ -25,6 +27,7 @@ $column-footer-height: 46px;
         font-weight: bold;
         border-top-left-radius: $column-border-radius;
         border-top-right-radius: $column-border-radius;
+        cursor: pointer;
     }
 
     footer {
@@ -36,9 +39,8 @@ $column-footer-height: 46px;
         border-bottom-right-radius: $column-border-radius;
     }
 
-    ul.card-list {
-        list-style-type: none;
-        max-height: calc(100% - #{$column-header-height} - #{$column-footer-height});
+    div.card-list {
+        max-height: calc(#{$column-height} - #{$column-header-height} - #{$column-footer-height});
         overflow-y: auto;
         &::-webkit-scrollbar {
             -webkit-appearance: none;
@@ -50,5 +52,20 @@ $column-footer-height: 46px;
             background-color: darken($list-color, 15);
             border-right: 5px solid $list-color
         }
+        .card-ghost {
+            transition: transform 0.18s ease;
+            transform: rotateZ(5deg)
+        }
+          
+        .card-ghost-drop{
+            transition: transform 0.18s ease-in-out;
+            transform: rotateZ(0deg)
+        }
+        .card-drop-preview {
+            background-color: rgba(150, 150, 200, 0.1);
+            border: 1px dashed #abc;
+            margin: 5px;
+          }
     }
 }
+
