--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -8,6 +8,7 @@ $board-content-height: 88vh;
 $column-border-radius: 5px;
 
 //colors
+$app-main-text-color: #333;
 $primary-color: #0079bf;
 $list-color: #ebecf0;
 $common-element-bg: rgba(255, 255, 255, 0.24);
