--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -2,8 +2,10 @@
 
 .board-content {
     height:$board-content-height;
+    display: flex;
     overflow-x: auto;
     overflow-y: hidden;
+    margin-right: $gap;
     
     &::-webkit-scrollbar {
         -webkit-appearance: none;
@@ -19,5 +21,18 @@
         background-color: rgba(150, 150, 200, 0.1);
         border: 1px dashed #abc;
         margin: 5px 45px 5px 5px;
-      }
+    }
+
+    .add-ner-column {
+        width: 250px;
+        height: 32px;
+        line-height: 32px;
+        padding: 4px 0 4px 15px;
+        cursor: pointer;
+        color: #fff;
+        margin-left: $gap;
+        font-size: 15px;
+        background-color: hsla(0, 0%, 100%, .24);
+        border-radius: $column-border-radius;
+    }
 }
