--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import "~bootstrap/scss/bootstrap";
 @import '_setting.scss';
 
 * {
@@ -16,10 +17,36 @@ body {
     height: 100vh;
     overflow: hidden;
     background-color: $primary-color; 
-    color: $app-main-text-color
+    color: $app-main-text-color;
+
+    i {
+        font-size: 14px;
+        margin: 0 4px;
+    }
+
+    .trello-container {
+        margin: 0 15px;
+        padding: 0
+    }
+
+    textarea:focus, 
+    textarea.form-control:focus, 
+    input.form-control:focus, 
+    input[type=text]:focus, 
+    input[type=password]:focus, 
+    input[type=email]:focus, 
+    input[type=number]:focus, 
+    [type=text].form-control:focus, 
+    [type=password].form-control:focus, 
+    [type=email].form-control:focus, 
+    [type=tel].form-control:focus, 
+    [contenteditable].form-control:focus {
+    box-shadow: none;
+    }
+
+    .btn:focus, .btn:active {
+        outline: none;
+        box-shadow: none;
+    }
 }
 
-i {
-    font-size: 14px;
-    margin-right: 4px;
-}
