--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 $gap : 10px;
-$navbar-app-height: 5vh;
-$navbar-board-height: 6vh;
-$board-content-height: 88vh;
+
+// 1vh scrollBar
+$navbar-app-height: 40px;
+$navbar-board-height: 50px;
+$board-content-height: calc(99vh - #{$navbar-app-height} - #{$navbar-board-height});
 
 $column-border-radius: 5px;
 
@@ -12,6 +14,7 @@ $app-main-text-color: #333;
 $primary-color: #0079bf;
 $list-color: #ebecf0;
 $common-element-bg: rgba(255, 255, 255, 0.24);
+$alert-danger: #ee5253;
 
 
 //screens
