update & remove column

--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -50,6 +50,9 @@
         margin-left: $gap;
         input.input-enter-new-column {
             margin: 5px 0;
+            &:focus {
+                border-color: $input-border-color ;
+            }
         }
 
         span.cancel-new-column {
