--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -12,6 +12,7 @@ $column-border-radius: 5px;
 //colors
 $app-main-text-color: #333;
 $primary-color: #0079bf;
+$input-border-color: #0079bf;
 $list-color: #ebecf0;
 $common-element-bg: rgba(255, 255, 255, 0.24);
 $alert-danger: #ee5253;
