add card to column

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -72,7 +72,8 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
 
     footer {
         padding-left: $gap;
-        height: $column-footer-height;   
+        height: $column-footer-height;
+        min-height: $gap;
         line-height: 36px;
         font-size: 16px;
         border-bottom-left-radius: $column-border-radius;
@@ -117,7 +118,13 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
             background-color: rgba(150, 150, 200, 0.1);
             border: 1px dashed #abc;
             margin: 5px;
-          }
+        }
+        .add-new-card-area {
+            .textarea-enter-new-card {
+                min-height: 54px;
+                max-height: 162px;
+            }
+        }
           
     }
 }
