--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,8 @@ body {
     [type=email].form-control:focus, 
     [type=tel].form-control:focus, 
     [contenteditable].form-control:focus {
-    box-shadow: none;
+        box-shadow: none;
+        border: 1px solid $input-border-color
     }
 
     .btn:focus, .btn:active {
@@ -57,8 +58,19 @@ body {
         cursor: pointer;
         &:focus {
             background-color: #fff;
-            border: 1px solid $input-border-color
         }
+    }
+
+    span.cancel-icon {
+        cursor: pointer;
+            margin-left: $gap;
+            i {
+                font-size: 18px;
+                color: $alert-danger;
+                &:hover {
+                    color: darken($alert-danger, 10)
+                }
+            }
     }
 }
 
